<package format="2">
    <name>erp42_description</name>
    <version>0.0.1</version>
    <description>
        Provides a URDF for a erp42
    </description>
    <maintainer email="sloretz@openrobotics.org">shane loretz</maintainer>
    <license>APACHE 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>urdf</depend>
</package>
